Issue #140 different alignment icons using iconmoon.

--- a/editor/src/styles.css
+++ b/editor/src/styles.css
@@ -110,3 +110,39 @@ code {
     ");
     background-size: 35px;
 }
+
+@font-face {
+    font-family: 'icomoon';
+    src:  url('external/align/fonts/icomoon.eot?sym0kk');
+    src:  url('external/align/fonts/icomoon.eot?sym0kk#iefix') format('embedded-opentype'),
+    url('external/align/fonts/icomoon.ttf?sym0kk') format('truetype'),
+    url('external/align/fonts/icomoon.woff?sym0kk') format('woff'),
+    url('external/align/fonts/icomoon.svg?sym0kk#icomoon') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+    /* use !important to prevent issues with browser extensions that change fonts */
+    font-family: 'icomoon' !important;
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-vertical_align_top:before {
+    content: "\e900";
+}
+.icon-vertical_align_center:before {
+    content: "\e901";
+}
+.icon-vertical_align_bottom:before {
+    content: "\e902";
+}
